--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -136,6 +136,11 @@
    
 }
 
+.tag{
+    font-size: xx-large;
+    
+}
+
 .cards:active{
     border-bottom: 2px solid rgb(233, 41, 89) !important;
 }
